--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hanlei Zhang"
   avatar           : "profile.png"
-  bio              : "PhD@Tsinghua University" "NLP, Dialogue System, MultiModal"
+  bio              : "PhD@Tsinghua University, CS, NLP and MultiModal"
   location         : "Beijing, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
