--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hanlei Zhang"
-  avatar           : "zhl.png"
+  avatar           : "zhl.jpg"
   bio              : "PhD@Tsinghua University, CS. NLP and MultiModal."
   location         : "Beijing, China"
   employer         :
