--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Hanlei Zhang 张瀚镭"
 title_separator          : "-"
 name                     : &name "Hanlei Zhang"
 description              : &description "personal description"
-url                      : https://zhanghanlei-thu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://HanleiZhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zhanghanlei-thu/zhanghanlei-thu.github.io"
+repository               : "HanleiZhang/HanleiZhang.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "zhanghanlei-thu"
+  github           : "HanleiZhang"
   google_plus      :
   keybase          :
   instagram        :
