--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=PS5KVSQAAAAJ&hl=en"
   email            : "zhang-hl20@mails.tsinghua.edu.cn"
-  researchgate     :  #"https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Hanlei_Zhang2"
   uri              :
   bitbucket        :
   codepen          :
