--- a/_config.yml
+++ b/_config.yml
@@ -82,11 +82,12 @@ analytics:
 author:
   name             : "Hanlei Zhang"
   avatar           : "zhl.jpg"
-  bio              : "PhD@Tsinghua University, CS. NLP and Knowledge Discovery."
+  bio              : "Natural Language Processing and Multimodal Deep Learning."
   location         : "Beijing, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=PS5KVSQAAAAJ&hl=en"
+  semanticscholar  : "https://www.semanticscholar.org/author/13390595"
   email            : "zhang-hl20@mails.tsinghua.edu.cn"
   researchgate     :  "https://www.researchgate.net/profile/Hanlei_Zhang2"
   uri              :
