--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hanlei Zhang"
   avatar           : "zhl.jpg"
-  bio              : "Intent Analysis, Natural Language Processing and Multimodal Machine Learning."
+  bio              : "Intent Analysis, Natural Language Processing, and Multimodal Machine Learning."
   location         : "Beijing, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
