--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hanlei Zhang"
-  avatar           : "zhl.jpg"
+  avatar           : "hanlei_zhang.jpg"
   bio              : "Intent Analysis, Natural Language Processing, and Multimodal Machine Learning."
   location         : "Beijing, China"
   employer         :
